chore: migrate to java 17