@@ -8,8 +8,8 @@
     <artifactId>greetings-e2e</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <properties>
-        <maven.compiler.target>16</maven.compiler.target>
-        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <cucumber.version>6.10.4</cucumber.version>
@@ -19,7 +19,7 @@
         <rest-assured.version>4.4.0</rest-assured.version>
         <logback.version>1.2.3</logback.version>
         <awaitility.version>4.1.0</awaitility.version>
-        <argLine>--enable-preview</argLine>
+        <!--        <argLine>&#45;&#45;enable-preview</argLine>-->
     </properties>
     <dependencies>
         <dependency>
