@@ -24,12 +24,12 @@
     <description>Demo project for BDD testing and Hexagonal architecture</description>
     <packaging>pom</packaging>
     <properties>
-        <java.version>16</java.version>
+        <java.version>17</java.version>
         <cucumber.version>6.10.4</cucumber.version>
         <testcontainer.version>1.15.3</testcontainer.version>
         <pact.version>4.2.7</pact.version>
-        <argLine>--enable-preview</argLine>
-        <spring-boot.run.jvmArguments>--enable-preview</spring-boot.run.jvmArguments>
+        <!--        <argLine>&#45;&#45;enable-preview</argLine>-->
+        <!--        <spring-boot.run.jvmArguments>&#45;&#45;enable-preview</spring-boot.run.jvmArguments>-->
         <jacoco.version>0.8.7</jacoco.version>
         <sonar.host.url>http://sonarcloud.io</sonar.host.url>
         <sonar.projectName>greetings-service</sonar.projectName>
