@@ -25,13 +25,13 @@
     <description>Statistics service for greetings</description>
     <packaging>pom</packaging>
     <properties>
-        <java.version>16</java.version>
+        <java.version>17</java.version>
         <cucumber.version>6.10.4</cucumber.version>
         <testcontainer.version>1.15.3</testcontainer.version>
         <awaitility.version>4.1.0</awaitility.version>
         <pact.version>4.2.7</pact.version>
         <spring.cloud.contract.version>3.0.3</spring.cloud.contract.version>
-        <argLine>--enable-preview</argLine>
+        <!--        <argLine>&#45;&#45;enable-preview</argLine>-->
         <jacoco.version>0.8.7</jacoco.version>
         <sonar.host.url>http://sonarcloud.io</sonar.host.url>
         <sonar.projectName>greetings-stat-service</sonar.projectName>
